--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-ttag": "^1.0.3",
     "babel-preset-env": "^1.7.0",
     "gettext-parser": "^1.3.1",
+    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "po-gettext-loader": "^0.1.1",
     "ttag": "^1.0.3",
