--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "i18n-example",
   "version": "1.0.0",
   "description": "a example for i18n",
-  "main": "index.js",
   "repository": "git@github.com:addhome2001/i18n-example.git",
   "author": "Seven <addhome2001@yahoo.com.tw>",
   "license": "MIT",
@@ -14,16 +13,21 @@
     "build-default": "LOCALE=default yarn compile",
     "build-zh": "LOCALE=zh yarn compile",
     "extract": "webpack --env.extract --config ttag/webpack.config.js",
-    "compile": "webpack --mode production --config ttag/webpack.config.js"
+    "compile": "webpack --mode production --config ttag/webpack.config.js",
+    "i18next:start": "webpack-serve --content i18next/dist --open --config i18next/webpack.config.js",
+    "i18next:build": "webpack --mode production --config i18next/webpack.config.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-ttag": "^1.0.3",
     "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^4.5.2",
     "gettext-parser": "^1.3.1",
     "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
+    "i18next": "^11.6.0",
+    "i18next-browser-languagedetector": "^2.2.3",
+    "i18next-xhr-backend": "^1.5.1",
     "po-gettext-loader": "^0.1.1",
     "ttag": "^1.0.3",
     "webpack": "^4.15.1",
